--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta charset="utf-8">
   <!--std encoding system-->
   <title>😎 The Jlou Site </title>
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
-
   <table cellspacing ="20">
     <tr>
-      <td><img src="images/jlou.jpg" alt="jlou profile picture" width="150" height="150"></td>
+      <td><img src="images/jlou-bt.png" alt="jlou profile picture" width="150" height="150"></td>
       <td>
         <h1>Janilou Sy </h1>
         <p><em>Undergrad Student at <a href="https://www.uah.edu/"> <strong>the University of Alabama in Huntsville</strong></a></em></p>
@@ -23,7 +23,7 @@
     </tr>
   </table>
 
-  <hr size = "3" noshade >
+  <hr>
 
   <h3>Education</h3>
   <ul>
